# game-design-mentor

./: .gitignore  README.md  app.py  app_ui.py  design.ipynb  main.py  pyproject.toml
docs/: game-design-mentor-architecture.md  game-design-mentor-cli-structure-design.md  game-design-mentor-mvp-plan.md
docs/features/: feature-01-concept-intake-and-player-intent-diagnosis.md  feature-02-core-loop-and-differentiation-review.md  feature-03-mvp-scope-and-playtest-plan-review.md  feature-04-playtest-retrospective-and-next-version-plan.md
mentor/: domain_classifier.py  extractor.py  graph.py  llm.py  llm_stream.py  models.py  reference_tools.py  reviewer.py  service.py  state_utils.py  validation.py
tests/: test_app_ui.py  test_domain_classifier.py  test_graph.py  test_reference_tools.py  test_reviewer.py  test_service.py  test_validation.py
