[project]
name = "game-design-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]==0.3.27",
    "langgraph==0.6.6",
    "openai>=1.99.0",
    "python-dotenv==1.1.1",
    "streamlit>=1.47.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=9.1.1",
]
